package org.hyades.client.ossindex;

import org.cyclonedx.proto.v1_4.Advisory;
import org.cyclonedx.proto.v1_4.Bom;
import org.cyclonedx.proto.v1_4.Property;
import org.cyclonedx.proto.v1_4.Severity;
import org.cyclonedx.proto.v1_4.Source;
import org.cyclonedx.proto.v1_4.Vulnerability;
import org.cyclonedx.proto.v1_4.VulnerabilityRating;
import org.cyclonedx.proto.v1_4.VulnerabilityReference;
import org.hyades.common.cwe.Cwe;
import org.hyades.common.cwe.CweResolver;
import us.springett.cvss.Cvss;
import us.springett.cvss.CvssV2;
import us.springett.cvss.CvssV3;
import us.springett.cvss.Score;

import java.text.NumberFormat;
import java.util.List;
import java.util.Optional;

import static org.cyclonedx.proto.v1_4.ScoreMethod.SCORE_METHOD_CVSSV2;
import static org.cyclonedx.proto.v1_4.ScoreMethod.SCORE_METHOD_CVSSV3;
import static org.cyclonedx.proto.v1_4.Severity.SEVERITY_CRITICAL;
import static org.cyclonedx.proto.v1_4.Severity.SEVERITY_HIGH;
import static org.cyclonedx.proto.v1_4.Severity.SEVERITY_INFO;
import static org.cyclonedx.proto.v1_4.Severity.SEVERITY_LOW;
import static org.cyclonedx.proto.v1_4.Severity.SEVERITY_MEDIUM;
import static org.cyclonedx.proto.v1_4.Severity.SEVERITY_UNKNOWN;
import static org.hyades.commonutil.VulnerabilityUtil.normalizedCvssV2Score;
import static org.hyades.commonutil.VulnerabilityUtil.normalizedCvssV3Score;
import static org.hyades.commonutil.VulnerabilityUtil.trimSummary;

public final class ModelConverterToCdx {

    static final String TITLE_PROPERTY_NAME = "dependency-track:vuln:title";

    public static Bom convert(List<ComponentReportVulnerability> vulnerabilities, boolean isAliasSyncEnabled) {

        Bom.Builder cyclonedxBom = Bom.newBuilder();
        cyclonedxBom.addAllVulnerabilities(
                vulnerabilities.stream()
                        .map(vulnerabilityData -> convert(vulnerabilityData, isAliasSyncEnabled))
                        .toList());
        return cyclonedxBom.build();
    }

    public static org.cyclonedx.proto.v1_4.Vulnerability convert(final ComponentReportVulnerability reportedVuln, boolean isAliasSyncEnabled) {
        Vulnerability.Builder vulnBuilder = Vulnerability.newBuilder();
        vulnBuilder.setId(reportedVuln.id());
        if (vulnBuilder.getId().toLowerCase().startsWith("cve-")) {
            vulnBuilder.setSource(Source.newBuilder().setName("NVD"));
        } else {
            vulnBuilder.setSource(Source.newBuilder().setName("OSSINDEX"));
            if (isAliasSyncEnabled && reportedVuln.cve() != null) {
                vulnBuilder.addReferences(
                        VulnerabilityReference.newBuilder()
                                .setId(reportedVuln.cve())
                                .setSource(Source.newBuilder()
                                        .setName("NVD")));
            }
        }
        Optional.ofNullable(reportedVuln.title()).ifPresent(title -> vulnBuilder.addProperties(
                Property.newBuilder().setName(TITLE_PROPERTY_NAME).setValue(trimSummary(title)).build()));
        vulnBuilder.setDescription(reportedVuln.description());
        if (reportedVuln.cwe() != null) {
            CweResolver cweResolver = CweResolver.getInstance();
            Cwe cwe = cweResolver.resolve(reportedVuln.cwe());
            if (cwe != null) {
                vulnBuilder.addCwes(cwe.getCweId());
            }
        }

        if (reportedVuln.reference() != null) {
            vulnBuilder.addAdvisories(Advisory.newBuilder().setUrl(reportedVuln.reference()));
        }
        for (String externalReference : reportedVuln.externalReferences()) {
            vulnBuilder.addAdvisories(Advisory.newBuilder().setUrl(externalReference));
        }

        final VulnerabilityRating rating = convertRating(reportedVuln.cvssVector());
        if (rating != null) {
            vulnBuilder.addRatings(rating);
        }

        return vulnBuilder.build();
    }

    private static VulnerabilityRating convertRating(final String cvssVector) {

        final Cvss cvss = Cvss.fromVector(cvssVector);
        if (cvss == null) {
            return null;
        }

        final Score score = cvss.calculateScore();
        if (cvss instanceof CvssV3) {
            return VulnerabilityRating.newBuilder()
                    .setSource(Source.newBuilder().setName("OSSINDEX"))
                    .setMethod(SCORE_METHOD_CVSSV3)
                    .setScore(Double.parseDouble(NumberFormat.getInstance().format(score.getBaseScore())))
                    .setVector(cvss.getVector())
                    .setSeverity(convert(normalizedCvssV3Score(score.getBaseScore())))
                    .build();
        } else if (cvss instanceof CvssV2) {
            return VulnerabilityRating.newBuilder()
                    .setSource(Source.newBuilder().setName("OSSINDEX"))
                    .setMethod(SCORE_METHOD_CVSSV2)
                    .setScore(Double.parseDouble(NumberFormat.getInstance().format(score.getBaseScore())))
                    .setVector(cvss.getVector())
                    .setSeverity(convert(normalizedCvssV2Score(score.getBaseScore())))
                    .build();
        }

        return null;
    }

    private static Severity convert(final org.hyades.common.model.Severity severity) {
        return switch (severity) {
            case CRITICAL -> SEVERITY_CRITICAL;
            case HIGH -> SEVERITY_HIGH;
            case MEDIUM -> SEVERITY_MEDIUM;
            case LOW -> SEVERITY_LOW;
            case INFO -> SEVERITY_INFO;
            default -> SEVERITY_UNKNOWN;
        };
    }
}
